Fixes #1 add nullable bool seriaizer

--- a/tests/OSPSuite.Serializer.Tests/OSPSuite.Serializer.Tests.csproj
+++ b/tests/OSPSuite.Serializer.Tests/OSPSuite.Serializer.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="AssertAreEquals.cs" />
     <Compile Include="BoolAttributeMapperSpecs.cs" />
     <Compile Include="CacheXmlSerializerSpecs.cs" />
+    <Compile Include="NullableBoolAttributeMapperSpecs.cs" />
     <Compile Include="NullableIntAttributeMapperSpecs.cs" />
     <Compile Include="ClassesForSpecs.cs" />
     <Compile Include="ColorAttributeMapperSpecs.cs" />
