--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 configuration: Debug
+image: Visual Studio 2017
 
 environment:
-  app_version: '2.0.0'
+  app_version: '2.0.1'
 
 version: '%app_version%.{build}'
 
@@ -23,9 +24,28 @@ build:
   publish_nuget: true
   verbosity: minimal
 
+skip_tags: true
+
+skip_branch_with_pr: true
+
+branches:
+  only:
+    - develop
+    - master
+
 test:
   assemblies:
     - OSPuite.Serializer.Tests.dll
+
+skip_tags: true
+
+skip_branch_with_pr: true
+
+pull_requests: 
+  do_not_increment_build_number: true     
+
+nuget: 
+  disable_publish_on_pr: true  
 
 skip_commits:
   files:
