--- a/src/OSPSuite.Serializer/OSPSuite.Serializer.csproj
+++ b/src/OSPSuite.Serializer/OSPSuite.Serializer.csproj
@@ -1,167 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B7DAC9BB-90BE-44D6-A1EF-E7BBFBE1A01C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OSPSuite.Serializer</RootNamespace>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <AssemblyName>OSPSuite.Serializer</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkProfile />
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <Version>1.0.0</Version>
+    <PackageVersion>1.0.0</PackageVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <InformationalVersion>1.0.0.0</InformationalVersion>
+    <PackageProjectUrl>https://github.com/Open-Systems-Pharmacology/OSPSuite.Serializer</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/Open-Systems-Pharmacology/Suite/master/logo.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Open-Systems-Pharmacology/OSPSuite.Serializer</RepositoryUrl>
+    <PackageTags>open-systems-pharmacology, ospsuite-components</PackageTags>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\OSPSuite.Serializer.xml</DocumentationFile>
-    <NoWarn>1591</NoWarn>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="OSPSuite.Utility, Version=2.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\OSPSuite.Utility.2.0.0.1\lib\net45\OSPSuite.Utility.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml" />
+    <PackageReference Include="OSPSuite.Utility" Version="4.0.0.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="..\..\SolutionInfo.cs">
-      <Link>Properties\SolutionInfo.cs</Link>
-    </Compile>
-    <Compile Include="AmbigousSerializerException.cs" />
-    <Compile Include="AssemblySerializerScanner.cs" />
-    <Compile Include="Attributes\AttributeMapper.cs" />
-    <Compile Include="Attributes\AttributeMapperNotFoundException.cs" />
-    <Compile Include="Attributes\NullableBoolAttributeMapper.cs" />
-    <Compile Include="Attributes\NullableIntAttributeMapper.cs" />
-    <Compile Include="EnumerableMap.cs" />
-    <Compile Include="EnumerableMappingException.cs" />
-    <Compile Include="EnumerableMappingPart.cs" />
-    <Compile Include="MappingPart.cs" />
-    <Compile Include="MappingPartExtensions.cs" />
-    <Compile Include="ReferenceMappingNullException.cs" />
-    <Compile Include="Reflection\ReadOnlyPropertyAccessor.cs" />
-    <Compile Include="SerializerConstants.cs" />
-    <Compile Include="SerializerExtensions.cs" />
-    <Compile Include="SerializerNotFoundException.cs" />
-    <Compile Include="StringInterning.cs" />
-    <Compile Include="Attributes\BoolAttributeMapper.cs" />
-    <Compile Include="Attributes\ColorAttributeMapper.cs" />
-    <Compile Include="Attributes\DateTimeAttributeMapper.cs" />
-    <Compile Include="Attributes\DoubleAttributeMapper.cs" />
-    <Compile Include="IAttributeMapper.cs" />
-    <Compile Include="Attributes\EnumAttributeMapper.cs" />
-    <Compile Include="Attributes\FloatAttributeMapper.cs" />
-    <Compile Include="Attributes\IntAttributeMapper.cs" />
-    <Compile Include="Attributes\IReferenceMapper.cs" />
-    <Compile Include="Attributes\LongAttributeMapper.cs" />
-    <Compile Include="Attributes\NullableDoubleAttributeMapper.cs" />
-    <Compile Include="Attributes\NullableFloatAttributeMapper.cs" />
-    <Compile Include="Attributes\NullableAttributeMapper.cs" />
-    <Compile Include="Attributes\StringAttributeMapper.cs" />
-    <Compile Include="Attributes\AttributeMappingException.cs" />
-    <Compile Include="Attributes\UintAttributeMapper.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Xml\XmlHelper.cs" />
-    <Compile Include="Xml\Extensions\XmlLinqExtensions.cs" />
-    <Compile Include="ISerializerRepositoryExtensions.cs" />
-    <Compile Include="MemberNamingConventions.cs" />
-    <Compile Include="Xml\DynamicNodeMapper.cs" />
-    <Compile Include="Xml\XmlEnumerationNodeMapper.cs" />
-    <Compile Include="Xml\XmlReferenceAttributeMapper.cs" />
-    <Compile Include="Xml\XmlEnumerableMappingPart.cs" />
-    <Compile Include="Xml\XmlMappingPart.cs" />
-    <Compile Include="Xml\XmlMappingPartExtensions.cs" />
-    <Compile Include="Xml\XmlAttributeMapper.cs" />
-    <Compile Include="Xml\XmlReferencePart.cs" />
-    <Compile Include="Xml\XmlCacheSerializer.cs" />
-    <Compile Include="Xml\IXmlSerializer.cs" />
-    <Compile Include="MappingNameResolver.cs" />
-    <Compile Include="MemberAccessException.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyMap.cs" />
-    <Compile Include="PropertyMapFactory.cs" />
-    <Compile Include="Reflection\FieldAccessor.cs" />
-    <Compile Include="Reflection\IMemberAccessor.cs" />
-    <Compile Include="Reflection\MemberAccessorBase.cs" />
-    <Compile Include="Reflection\MemberAccessorFactory.cs" />
-    <Compile Include="Reflection\ReadWritePropertyAccessor.cs" />
-    <Compile Include="Reflection\ReadOnlyPropertyWithPrivateFieldAccesor.cs" />
-    <Compile Include="Xml\IXmlMapper.cs" />
-    <Compile Include="Xml\XmlStaticMapper.cs" />
-    <Compile Include="Xml\XmlSerializer.cs" />
-    <Compile Include="Attributes\AttributeMapperRepository.cs" />
-    <Compile Include="Xml\XmlSerializerRepository.cs" />
+    <Compile Include="..\..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
+    <Folder Include="Properties\" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="OSPSuite.Serializer.nuspec" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
