--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -5,8 +5,11 @@ on:
     branches:
     - main
 
+permissions:
+  packages: write
+
 env:
-  MAJOR: 3
+  MAJOR: 4
   MINOR: 0
   MINORMINOR: 1 
   RUN: ${{ github.run_number }}
